Update postprocessing code

--- a/postprocessing.ipynb
+++ b/postprocessing.ipynb
@@ -394,7 +394,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>8 rows × 288 columns</p>\n",
+       "<p>8 rows × 285 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -448,7 +448,7 @@
        "75%            0.0           0.0  1302.000000  13949.000000  \n",
        "max            0.0           0.0  1728.000000  18588.000000  \n",
        "\n",
-       "[8 rows x 288 columns]"
+       "[8 rows x 285 columns]"
       ]
      },
      "execution_count": 3,
@@ -542,13 +542,13 @@
       ".dynstr_table_index_link      int64\n",
       ".dynstr_info                  int64\n",
       ".dynstr_alignment             int64\n",
-      "dynsym_type                   float64\n",
-      "dynsym_flags                  float64\n",
-      "dynsym_size                   float64\n",
-      "dynsym_entsize                float64\n",
-      "dynsym_table_index_link       float64\n",
-      "dynsym_info                   float64\n",
-      "dynsym_alignment              float64\n",
+      ".dynsym_type                  object\n",
+      ".dynsym_flags                 object\n",
+      ".dynsym_size                  object\n",
+      ".dynsym_entsize               int64\n",
+      ".dynsym_table_index_link      int64\n",
+      ".dynsym_info                  int64\n",
+      ".dynsym_alignment             int64\n",
       ".fini_type                    object\n",
       ".fini_flags                   object\n",
       ".fini_size                    int64\n",
@@ -814,7 +814,7 @@
       "R_386_SIZE32                  int64\n",
       "GOT_SIZE                      int64\n",
       "HASH_SIZE                     int64\n",
-      "dtypes: float64(139), int64(149), object(54)\n",
+      "dtypes: float64(132), int64(153), object(57)\n",
       "memory usage: 5.4+ KB\n"
      ]
     }
@@ -1132,7 +1132,7 @@
        " '.debug_size',\n",
        " '.dynamic_size',\n",
        " '.dynstr_size',\n",
-       " 'dynsym_size',\n",
+       " '.dynsym_size',\n",
        " '.fini_size',\n",
        " '.hash_size',\n",
        " '.gnu.hash_size',\n",
