Small changes in postprocessing script and add feature selection

--- a/feature_selection.ipynb
+++ b/feature_selection.ipynb
@@ -14,13 +14,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['.debug_table_index_link',\n",
+       "['EntryPointAddress',\n",
+       " '.debug_table_index_link',\n",
        " 's_STT_SECTION_STB_LOCAL',\n",
        " 's_STT_SECTION_STB_GLOBAL',\n",
        " '.text_flags',\n",
@@ -216,14 +217,14 @@
        " 'rodata1_size']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "attr_list = []\n",
-    "with open('weka_feature_selection.txt', 'r') as f:\n",
+    "with open('feature_selection/weka_features_toremove.txt', 'r') as f:\n",
     "    for l in f:\n",
     "        attr_list.append(l[27:].strip())\n",
     "attr_list"
@@ -231,23 +232,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "df_train = pd.read_csv('./results_final.csv')\n",
+    "# df_test = pd.read_csv('./dataset/test.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/usr/local/lib/python2.7/dist-packages/IPython/core/interactiveshell.py:2718: DtypeWarning: Columns (7,42,43,136) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  interactivity=interactivity, compiler=compiler, result=result)\n",
-      "/usr/local/lib/python2.7/dist-packages/IPython/core/interactiveshell.py:2718: DtypeWarning: Columns (7) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  interactivity=interactivity, compiler=compiler, result=result)\n"
+      "(2, 342)\n"
      ]
     }
    ],
    "source": [
-    "df_train = pd.read_csv('./dataset/train.csv')\n",
-    "df_test = pd.read_csv('./dataset/test.csv')"
+    "print df_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "df_train.drop(attr_list, axis=1, inplace=True)\n",
+    "# df_test.drop(attr_list, axis=1, inplace=True)"
    ]
   },
   {
@@ -259,51 +280,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(6388, 343) (2737, 343)\n"
+      "(2, 148)\n"
      ]
     }
    ],
    "source": [
-    "print df_train.shape, df_test.shape"
+    "print df_train.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_train.drop(attr_list, axis=1, inplace=True)\n",
-    "df_test.drop(attr_list, axis=1, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(6388, 149) (2737, 149)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print df_train.shape, df_test.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "df_train.to_csv('train_final.csv', index=False)\n",
-    "df_test.to_csv('test_final.csv', index=False)"
+    "df_train.to_csv('testing.csv', index=False)\n",
+    "# df_test.to_csv('test_final.csv', index=False)"
    ]
   },
   {
